ahm-lc-live-map-main/ahm-lc-live-map-main/src/main/etc/cd/os/lclm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: artifactory.amerhonda.com/sbxocp/lc-live-map:1.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
