ahm-lc-live-map-main/ahm-lc-live-map-main/src/main/etc/cd/os/lclm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  type: LoadBalancer
  ports:
  - name: 8080-tcp
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: client
