ahm-lc-live-map-main/ahm-lc-live-map-main/src/main/etc/cd/os/lclm-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: client
  labels:
    app: client
spec:
  host: lclm.localhost
  to:
    kind: Service
    name: client
  port:
    targetPort: 8080-tcp
